# TerraInvicta

./: .env.linux.dist  .env.win.dist  .gitignore  AGENTIC.txt  COMMIT_MSG.txt  DEVELOPER_GUIDE.md  FEATURES.md  FRAMEWORK_DESIGN.md  PHASE2_EXTRACTION_GUIDE.txt  PHASE2_PROGRESS.txt  README.md  V1_TO_V2_ROADMAP.md  pyproject.toml  requirements-dev.txt  setup.py  terractl.py
.ai/: context.md  foundation.json  instructions.md
.ai/cache/sessions/: 2026-02-18_session13-handoff.json  2026-02-18_session14-wale-character.json
.ai/sessions/: 2026-02-19_tier-design-note.md  2026-02-19_v2-orchestrator-implementation.json  2026-02-26-character-redesign-valentina-dariush-wale.md  2026-02-26-web-interface-feasibility.md
docs/: performance.md  technical.md  workflow.md
lib/: __init__.py  core.py  launch_windows.py  performance.py
lib/commands/: __init__.py  clean.py
resources/: stage.md  tiers.md
resources/actors/_template/: README.md  background.txt  examples_tierN.md  openers.csv  personality.txt  reactions.csv  spec.toml  (+1 more)
resources/prompts/: codex_eval.txt  system.txt
src/: __main__.py
src/clean/: __init__.py  command.py
src/core/: core.py  date_utils.py
src/inject/: __init__.py  command.py
src/install/: command.py
src/load/: __init__.py  command.py
src/parse/: __init__.py  command.py
src/perf/: command.py  performance.py
src/play/: command.py
src/preset/: command.py  launch_windows.py
src/run/: command.py
src/stage/: __init__.py  command.py
src/validate/: command.py
tests/: __init__.py
tests/core/: __init__.py
tests/preset/: __init__.py
(+73 files in other folders)
